ci/k8/prd/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-short-links
  namespace: short-links
  creationTimestamp: "2023-03-29T00:00:00Z"
  annotations:
    cert-manager.io/issuer: letsencrypt-nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    prometheus.io/scrape: "true"
    prometheus.io/port: "10254"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header x-forwarded-uri $request_uri;
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1200" # 20 min
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1200" # 20 min
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - gr8.cx
      secretName: letsencrypt-nginx
  rules:
    - host: gr8.cx
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: service-short-links-production-prd
                port:
                  number: 3000
